<resources>
    <string name="app_name">ProjectSunGlasses</string>
    <string name="titleCatalogue">Select Catalogue</string>
    <string name="titleMen">Mens</string>
    <string name="titleWomen">Womens</string>
    <string name="titleChild">Childrens</string>
    <string name="btnMen">Mens</string>
    <string name="btnWomen">Womens</string>
    <string name="btnChild">Childrens</string>
    <string name="btnProductDescription">View Description</string>
    <string name="txtPrice">Price: $35</string>
    <string name="ImgMenProduct">Men Product Image</string>
    <string name="ImgWomenProduct">Women Product Image</string>
    <string name="btnSignIn">Sign In</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="imgSigninSignup">Image at Sign in sign up page</string>
    <string name="imgSplashScreen">Image in Splash Screen</string>
    <string name="txtSplash">Vancity Developers</string>
    <string name="signInImage">Sign In to Shop With Us</string>
    <string name="hintUsername">Username</string>
    <string name="hintPassword">Password</string>
    <string name="bsignin">Sign In</string>
    <string name="signUpTag">Not yet a member? Sign Up here</string>
    <string name="signupUserName">Enter your Username</string>
    <string name="signupEmail">Enter your Email</string>
    <string name="signupPassword">Enter your Password</string>
    <string name="signupPasswordRe">Reenter your Password</string>
    <string name="bsignUp">SIGN UP</string>

    <string name="imgDesc">Image of a Sunglass</string>
    <string name="btnDel">Delete</string>
    <string name="btnChkOut">Proceed to CheckOut</string>
    <string name="hintQty">Number of items in the cart</string>
    <string name="qty">Quantity</string>
    <string name="dfltQty">1</string>
    <string name="CrtTot">Your Cart Total</string>
    <string name="tot">total</string>
    <string name="txtCost">Cost of the item</string>
    <string name="sunGlasCost">$124.99</string>
    <string name="imgChildPoduct">Child Product Image</string>
    <string name="txtName">Name:</string>
    <string name="txtPrices">Price:</string>
    <string name="txtDescription">Description:</string>
    <string name="txtColour">Colour:</string>
    <string name="txtCategory">Category</string>
    <string name="name">I\'ll be rich forever bee sunglasses</string>
    <string name="price">$250.00</string>
    <string name="description">Oversized Aviators with a 24k gold bee crowning the frame.</string>
    <string name="colour">Blue</string>
    <string name="category">Men</string>
    <string name="imgDescription">SnoopDogg</string>
    <string name="btnAdd">Add To Cart</string>
</resources>