<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <ImageView
        android:id="@+id/imgSunglass"
        android:layout_width="249dp"
        android:layout_height="196dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/imgDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sunglasses" />

    <TextView
        android:id="@+id/TxtQty"
        android:layout_width="139dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/qty"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgSunglass" />

    <EditText
        android:id="@+id/NoOfItems"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:autofillHints="@string/dfltQty"
        android:ems="10"
        android:hint="@string/hintQty"
        android:inputType="number"
        android:text="@string/dfltQty"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toEndOf="@+id/TxtQty"
        app:layout_constraintTop_toBottomOf="@+id/imgSunglass" />

    <Button
        android:id="@+id/btnDel"
        android:layout_width="264dp"
        android:layout_height="54dp"
        android:layout_marginTop="172dp"
        android:text="@string/btnDel"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgSunglass" />

    <Button
        android:id="@+id/btnChckOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="232dp"
        android:layout_marginBottom="30dp"
        android:text="@string/btnChkOut"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDel" />

    <TextView
        android:id="@+id/CrtTot"
        android:layout_width="213dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="138dp"
        android:layout_marginBottom="39dp"
        android:text="@string/CrtTot"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnChckOut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDel" />

    <EditText
        android:id="@+id/AmtCartTotal"
        android:layout_width="153dp"
        android:layout_height="60dp"
        android:layout_marginTop="138dp"
        android:layout_marginBottom="39dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/tot"
        android:inputType="textPersonName"
        android:text="@string/sunGlasCost"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnChckOut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/CrtTot"
        app:layout_constraintTop_toBottomOf="@+id/btnDel" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="145dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/txtCost"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TxtQty" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="124dp"
        android:layout_height="34dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/sunGlasCost"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/NoOfItems" />

</androidx.constraintlayout.widget.ConstraintLayout>