<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChildProductPage">

    <ImageView
        android:id="@+id/imgChild3"
        android:layout_width="137dp"
        android:layout_height="129dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/imgChildPoduct"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDescription1"
        app:srcCompat="@drawable/mirrorsunglasses" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtPrice"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgChild3" />

    <Button
        android:id="@+id/btnDescription3"
        android:layout_width="135dp"
        android:layout_height="64dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/btnProductDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:text="@string/txtPrice"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/imgChild4" />

    <Button
        android:id="@+id/btnDescription4"
        android:layout_width="135dp"
        android:layout_height="64dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/btnProductDescription"
        app:layout_constraintStart_toEndOf="@+id/btnDescription3"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <ImageView
        android:id="@+id/imgChild4"
        android:layout_width="143dp"
        android:layout_height="133dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/imgChildPoduct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgChild3"
        app:layout_constraintTop_toBottomOf="@+id/btnDescription2"
        app:srcCompat="@drawable/mirrorsunglasses" />

    <TextView
        android:id="@+id/titleChild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="serif-monospace"
        android:text="@string/titleChild"
        android:textColor="@color/purple_500"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgChild1"
        android:layout_width="137dp"
        android:layout_height="129dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/imgChildPoduct"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleChild"
        app:srcCompat="@drawable/mirrorsunglasses" />

    <ImageView
        android:id="@+id/imgChild2"
        android:layout_width="143dp"
        android:layout_height="133dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/imgChildPoduct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgChild1"
        app:layout_constraintTop_toBottomOf="@+id/titleChild"
        app:srcCompat="@drawable/mirrorsunglasses" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtPrice"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgChild1" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:text="@string/txtPrice"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/imgChild2" />

    <Button
        android:id="@+id/btnDescription1"
        android:layout_width="135dp"
        android:layout_height="64dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/btnProductDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/btnDescription2"
        android:layout_width="135dp"
        android:layout_height="64dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/btnProductDescription"
        app:layout_constraintStart_toEndOf="@+id/btnDescription1"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />
</androidx.constraintlayout.widget.ConstraintLayout>